--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -20,6 +20,7 @@ next: "/blog/get-a-job-4/"
 
 ![](https://github.com/gautamtata/blog/blob/master/static/media/tech6.jpg?raw=true)
 
+
 # Introduction and Background
 
 Have you ever failed a tech interview? I have failed a ton of interviews from behavioral interviews, phone-screens, and onsite whiteboarding questions. I can remember the embarrassing situations of having massive pit stains and having to restrict raising my hand to write code. 
@@ -31,7 +32,7 @@ Interviewers want to work with candidates they like. Leaving a good impression o
 > Tell me about yourself. How did you get into coding? Why was X(job-specific) a good fit for you? How do your goals align with X companies?
 
 ## The elevator pitch
-An elevator pitch is exactly what it sounds like: imagine you are stuck in an elevator with someone who you want to sell yourself to. You have about 30 seconds to a minute to get your point across.
+An elevator pitch is a short description of an idea, product, or company that explains the concept in a way such that any listener can understand it in a short period. This description typically explains who the thing is for, what it does, why it is needed, and how it will get done: imagine you are stuck in an elevator with someone who you want to sell yourself to. You have about 30 seconds to a minute to get your point across.
 
 * Keep it short
 * Get straight to the point
@@ -41,7 +42,7 @@ For example, for internships, you can say your name, school, area of focus, and 
 
 > My name is Gautam and I'm currently a student at CSU Monterey Bay. I have previously interned at the Museum of Natural History, where I developed an application that visualizes climate change in Monterey county, which is used by over 50 researchers. 
 >
-> I became interested in the mapping space because I loved the power of spreading a message across using a Map. Since then I have been working at learning X tools and researching X possibilities which is when I came across Uber maps. I'd be grateful to speak with you about X opportunity. 
+> I became interested in the mapping space because I loved the power of spreading a message across using a Map. Since then, I have been working at learning X tools and researching X possibilities, which is when I came across Uber maps. I'd be grateful to speak with you about X opportunity. 
 
 With an interviewer, you must always ask the question: Why do they want me? Align yourself with the values of the company, understand what tech-stack they use, read their engineering blog, and impress the interviewer.
 
@@ -74,20 +75,20 @@ Later, we will talk about what to do and what not to do during each type of inte
 Succeeding in an interview involves more than just technical skills. Behavioral interviews are crucial, and their level of difficulty is  *directly proportional* to how much experience you have.
 Senior engineers are expected to lead, strategize, and mentor with other engineers, and therefore the bar of people skills is much higher.
 
-Hiring a talented engineer that cannot work with others can ultimately be a net deficit for companies. Companies don't want to hire [brilliant jerks](http://www.brendangregg.com/blog/2017-11-13/brilliant-jerks.html). The company is better off not hiring a very talented engineer who refuses to work with others or causes an entire team to be unproductive. Companies want to hire the right person that will work well with the existing employees and help the team and company achieve greater heights. Behavioral interviews are one way of determining if someone will be useful to work with from a non-technical standpoint.
+You might be a talented SWE, but if you cannot work well with others, you will not be an asset to the company. There is a surplus amount of talent in the valley, and therefore companies want to hire talented-engineer with people skills they don't want to hire [brilliant jerks](http://www.brendangregg.com/blog/2017-11-13/brilliant-jerks.html).
 
-## Most companies evaluate behavioral skills
+The company is more than happy to find a lesser talented engineer than someone who cannot work well with others, which can cause the team to be worse off, and behavioral interviews are one way of determining if someone will be useful to work with from a non-technical standpoint.
 
-Companies value behavioral skills and do evaluate candidates on them. At the time of writing, Facebook has one round (out of four) dedicated to behavioral interviews. 
+### Every company has a behavioral interview
 
-## What Salesforce looks for in behavioral interviews
+Pretty much all tech companies in the bay area have behavioral interviews. When I interviewed with Salesforce, they had three behavioral interviews. One before even the remote technical challenge and two during the onsite interviews.
 
-- Discuss anything written on your resume, and be able to go in-depth
-- Provide specific examples about what you did and the resulting impact
-- Critique yourself and share what you learned from a past situation
-- Talk about what you like about your current role and being a developer
-- Discuss what and why changes you would like to make
+### What Salesforce looks for in behavioral interviews
 
+* Any project on your resume is fair game. Be able to talk 30-40 minutes about it.
+* Talk about how you faced a challenge and how you overcame it.
+* Example of what you did and what it resulted in.
+* What are you looking for at Salesforce and why this role?
 
 ## Cracking The Technical Interview
 
@@ -124,15 +125,79 @@ A great source that I found that someone created a curated list of 50 or so ques
 
 **How many questions should I do?**: My suggestion would be to approach the **Breadth of problems rather than the depth**. What I mean by that is try multiple variations of different data structures and algorithms as opposed to going deep in just one topic (say, Arrays).
 
+### During the Coding Interview
+
+Now, you are ready to put your skills to test! In a coding interview, you will be given a programming question by the interviewer, and you will code it in real-time using an Integrated Developer Environment (IDE) or using a Whiteboard(onsite). The time for a question is usually 30-45 minutes with 10-15 minutes reserved for asking questions at the end.
+
+#### Preparing for the remote interview
+
+* Find a quiet environment where you won't be disturbed.
+* Use earphones or noise-canceling headphones and avoid using inbuilt speakers.
+* If you don't have a laptop and need to use a phone, let the recruiter know beforehand.
+* Make sure you have a pen and paper in hand to write the question down.
+
+### The start of the interview
+The interviewer will usually spend **5 minutes asking you to tell them about yourself**. Make sure you are prepared with an elevator pitch.
+
+The next step is **receiving the question**. Most candidates at this stage will jump to coding without clarifying the question. This can be a fatal mistake because the question might usually contain hints or aspects of the problem that you need to understand. Before coding, take a deep breath and repeat the question back word-to-word to make sure you got it right.
+
+Try to ask questions regarding possible edge-cases(discussed below) and try to understand the question end-to-end. Some interviewers omit details to see if you can notice that and ask questions.
+
+Before you code, explain your high-level approach to the interviewer. Make sure you explain the **brute force** solution and state it's time and space complexity. Don't jump into an optimized solution just yet. Most likely, the interviewer will ask you if we can do better? Now state another solution that you know and **again state the time and space complexity.**
+
+After you both have agreed upon a solution: Ask if you can code the solution out.
+
+This is how an example might look like:
+
+> Interviewer: Write an algorithm that accepts an array and a target number as inputs. Your goal is to find two numbers that add up to that number.
+>
+> Me: So, I'm writing a function that accepts an array and a number as arguments and two numbers in the array add up to the number?
+>
+> Interviewer: Yes, that's correct.
+>
+> Me: Okay, is it guaranteed that two numbers add up to the target?
+>
+> Interviewer: That's a good question. Yes that is guaranteed.
+>
+> Me: Okay, What about an empty array, infinitely large numbers, NaN target, Infinity as inputs?
+>
+> Interviewer: If you get an empty array, throw an exception, and for others, assume you just get real numbers as inputs.
+>
+> Me: Thanks. I think I have a solution in mind. I can run two-for-loops one that points to the first number and the other that iterates from the second onwards and keeps checking if it adds to the first number and if not keep checking every subset until the target is reached. The time complexity would be quadratic (O(n^2)), and space would be O(1).
+>
+> Interviewer: Great. But do you think we can do better than quadratic time?
+>
+> Me: Umm, I guess, We can throw the list of numbers into hashmap where insertion is O(1), and as we add an keep checking if target - dadded number is in the hashMap until we get to a solution. The time complexity would be Linear (O(N)), and space complexity would be O(N).
+>
+> Interviewer: Yeah, that sounds like a good solution! Let's code it up.
+
+#### What to do if you're stuck during the interview
+It's completely natural to be stuck during an interview. I remember one interview where I was completely lost, and the interviewer didn't want to give any hints, so I just stared at him and the whiteboard for 45 minutes.
+
+But don't worry, this is just a part of the process and here are something's you can keep in mind when you are stuck:
+
+* Talk through what you initially thought and explain why it doesn't work.
+* Talk about all the data-structures that you can use and whether they can be applied to the question.
+* Try to think of questions that you think might be related to the question and communicate to the interviewer.
+* The worst case, it's better to let the interviewer know that you don't know the answer and in that case, the interviewer can help you with tips or even ask a different question.
+
+#### After coding
+
+It's important that you don't just announce that you are done. Always keep questioning every line of code. Ask the interviewer is it okay if I run through a couple of test cases to see if the code is working?
+
+Walkthrough your code and try to break it every way you can think of. If the interviewer is happy with your solution, the interview ends here. But there is one last thing which is important. 
+
+If there is time left, ask your interviewers questions that you have prepared. Questions specific to their work would be great or questions about the company, team, etc. [Questions to ask interviewers](https://github.com/yangshun/tech-interview-handbook/blob/master/contents/questions-to-ask.md)
+
 ### Do's and Don't During A Technical Interview
 
 * Do: **Dress well**. This is a weird one. Most engineers don't care how you dress, and the dress code in silicon valley is casual as already, but some (older) interviewers make a decision based on how your appearance is.
 * Do: Start the interview by **greeting the interviewer** and trying to make an excellent first impression. Be confident.
 * Do: **Listen to the interviewer carefully**. A lot of times, the interviewers drop hints in their questions. (Ex: The list is **sorted** which means that you can  do the problem in a time better than O(N log N))
 * Don't: Do not under any circumstances **assume anything** about the question on your own. If you have a doubt, clarify it!
-* Do: **Ask about edge cases!** spend at least 5 minutes clarifying all the edge cases that come to your mind, (What happens if a list is empty?) ** We will discuss a list of edge cases below.
-* Do: Have a **Brute force solution**. Never assume that it's too simple and the interviewer doesn't care about the brute force. The interviewer wants to see that you are capable of coming up with different solutions and iterate on it to make it better!
-* Don't: **Keep quiet during the interview**. Even if you need time to think let the interviewer know.
+* Do: **Ask about edge cases!** spend at least 5 minutes clarifying all the edge cases that come to your mind (What happens if a list is empty?) ** We will discuss a list of edge cases below.
+* Do: Have a **Brute force solution**. Never assume that it's too simple, and the interviewer doesn't care about the brute force. The interviewer wants to see that you are capable of coming up with different solutions and iterate on it to make it better!
+* Don't: **Keep quiet during the interview**. Even if you need time to think, let the interviewer know.
 * Do: **Communicate what you are thinking!** It is very important to keep talking during the interview. Let the interviewer know what your approach is and what you plan to do next. I cannot iterate how vital this point is.
 * Do: Let the **interviewer know if you cannot solve the problem**. Usually, you know within 10-15 minutes if you can solve the problem. It's essential to let the interviewer know so that he/she can give you a hint, or give you another question! [You might face some interviewers who want to see you struggle: screw them. A good interviewer wants to help you out, so believe that.]
 * Do: This is extremely important and cannot be stated enough. **Have questions for the interviewer at the end**. No Matter how you did, have questions that you have researched about them, or have great questions about the company! This really-really shows your interest.[Questions to ask interviewers](https://github.com/yangshun/tech-interview-handbook/blob/master/contents/questions-to-ask.md)
@@ -154,7 +219,7 @@ Some of these things might not be as highly ranked as solving the problem, but w
 
 ## Practicing for the interview
 
-Now that you have a way to prepare for the behavioral and technical interviews, it's time to practice them. 
+Interviewing is a skill that you can get better at. The steps mentioned above can be rehearsed over and over again until you have fully internalized them, and following those steps become second nature to you. A good way to practice is to find a friend to partner with and the both of you can take turns to interview each other.
 
 Mock interviews are probably the most critical aspect of interview prep. Getting used to the nerves during the interview isn't easy. It isn't easy to just go up there and start talking. It takes practice because **INTERVIEWING IS A SKILL**.
 
