--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -48,19 +48,7 @@ Next, we will move onto what methods we can use to apply to jobs.
 
 (NOTE 2: THESE ARE STATISTICS OVER 8 MONTHS: FROM JULY TO FEBRUARY CORRESPONDING TO THE TIME AFTER I GRADUATED TILL THE TIME I GOT EMPLOYED)
 
-> JOBS APPLIED -> 270
->
-> ACCEPTED FOR INTERVIEW -> 51
->
-> NUMBER OF INTERVIEWS FROM ONLINE APPLICATIONS -> 8
->
-> NUMBER OF INTERVIEWS FROM COLD EMAILS -> 16
->
-> NUMBER OF INTERVIEWS FROM EMPLOYEE REFERRALS -> 4
->
-> NUMBER OF INTERVIEWS FROM WALKING INTO COMPANIES -> 21
->
-> NUMBER OF INTERVIEWS FROM CAREER FAIRS -> 2
+![Application Statistics](./media-link/job-stats.png)
 
 As you can see, an incredible percentage **(~72%)** of my interviews were from cold-emails or from walking into companies. Only a disappointing **15%** interviews were from online applications.
 
